Updated Structure. Separate Responsibilities: - TextMessageHandler, PhotoMessageHandler, CallbackQueryHandler - to handle update response from client. - MessageService - to send messages to client. - Added Util. Classes Instructions ( stores all instructions) and BarCodeUtils( read barcode from image) - Added ExpirationDateExtractionService to send POST request and get exp. date

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=ZeroWasteFood
-TOKEN=7496319396:AAGx2AE3USjrLNUJXDRB06EtZD8saLqspX0
+telegram.bot.token=7496319396:AAGx2AE3USjrLNUJXDRB06EtZD8saLqspX0
 logging.level.org.springframework.jdbc=DEBUG
-spring.datasource.url=jdbc:postgresql://localhost:5432/admin
-spring.datasource.username=admin
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/telegram_bot
+spring.datasource.username=yaroslav
+spring.datasource.password=test
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
