--- a/src/main/resources/application-mac.properties
+++ b/src/main/resources/application-mac.properties
@@ -1,9 +1,9 @@
 spring.application.name=ZeroWasteFood
 telegram.bot.token=7496319396:AAGx2AE3USjrLNUJXDRB06EtZD8saLqspX0
 logging.level.org.springframework.jdbc=DEBUG
-spring.datasource.url=jdbc:postgresql://localhost:5432/telegram_bot
-spring.datasource.username=yaroslav
-spring.datasource.password=test
+spring.datasource.url=jdbc:postgresql://localhost:5432/admin
+spring.datasource.username=admin
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -12,4 +12,3 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.validationQuery=SELECT 1
 
 openfoodfacts.api.url=https://world.openfoodfacts.org/api/v0/
-spring.profiles.active=mac
