--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.validationQuery=SELECT 1
 
 openfoodfacts.api.url=https://world.openfoodfacts.org/api/v0/
-spring.profiles.active=mac
+spring.profiles.active=
