Added new ProcessImageClient and ProcessImageService to get barcode and expiration date at once.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.validationQuery=SELECT 1
 
-openfoodfacts.api.url=https://world.openfoodfacts.org/api/v0/
+openfoodfacts.api.url=https://de.openfoodfacts.org/api/v0/
 spring.profiles.active=
