--- a/src/main/resources/application-mac.properties
+++ b/src/main/resources/application-mac.properties
@@ -11,4 +11,4 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.validationQuery=SELECT 1
 
-openfoodfacts.api.url=https://world.openfoodfacts.org/api/v0/
+openfoodfacts.api.url=https://de.openfoodfacts.org/api/v0/
